--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
@@ -118,7 +118,7 @@
                         <div class="col-3 form-label">
                             <label class="kt-padding-l-10 mandatory"> Penal Interest (%) </label>
                         </div>
-                        <div class="col-9">
+                        <div class="col-9 penal">
                             <input type="test" class="form-control" formControlName="penalInterest"
                                 [class.isError]="fillingForm.get('penalInterest').touched && fillingForm.get('penalInterest').invalid"
                                 placeholder="00%">
