--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
@@ -93,51 +93,37 @@
                             <div *ngIf="loan.loanStage.id == 1 ">
                                 <div class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
-                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed':  !(((loan.loanStatusForAppraiser != 'pending' || loan.loanStatusForAppraiser != 'rejected')
-                                    && this.userType == 7) && edit)}"
+                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed':  !permission.addAppraiserRating}"
                                         class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 2">
                                 <div class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
-                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !(((loan.loanStatusForBM == 'pending' || loan.loanStatusForBM == 'rejected' ||loan.loanStatusForBM == 'incomplete')
-                                    && this.userType == 5 && loan.loanStatusForAppraiser == 'approved')&&edit)}"
+                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !permission.addBmRating}"
                                         class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 7">
                                 <div class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
-                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !(((loan.loanStatusForOperatinalTeam == 'pending' || loan.loanStatusForOperatinalTeam == 'rejected' ||loan.loanStatusForOperatinalTeam == 'incomplete')
-                                    && this.userType == 8 && loan.loanStatusForBM == 'approved')&&edit)}"
+                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !permission.addOpsRating}"
                                         class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 3">
                                 <div class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
-                                    <button (click)="packetImageUpload(loan)" class="red-button"
-                                        [ngClass]="{'cursor-not-allowed':!edit}">Assign
+                                    <button (click)="editLoan(loan)" class="red-button"
+                                        [ngClass]="{'cursor-not-allowed':!permission.assignPacket}">Assign
                                         Packet</button>
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 4">
-                                <div class="kt-pointer mt-1">
-                                    <button (click)="disburse(loan.customerLoan[0].id,loan.id)"
-                                        *ngIf="!loan?.customerLoan[0]?.disbursed"
-                                        [ngClass]="{'cursor-not-allowed':!edit}" class="green-button">Disburse
+                                <div class="kt-pointer">
+                                    <button (click)="editLoan(loan)"
+                                        [ngClass]="{'cursor-not-allowed':!permission.loanDisbursement}" class="green-button">Disburse
                                         Amount</button>
-                                    <button class="warning-button"
-                                        *ngIf="loan?.customerLoan[0]?.disbursed">Disbursed</button>
-                                </div>
-                                <div class="kt-pointer my-2" *ngIf="loan?.customerLoan[1]">
-                                    <button (click)="disburse(loan.customerLoan[1].id,loan.id)"
-                                        *ngIf="!loan?.customerLoan[1]?.disbursed"
-                                        [ngClass]="{'cursor-not-allowed':!edit}" class="green-button">Disburse
-                                        Amount</button>
-                                    <button class="warning-button "
-                                        *ngIf="loan?.customerLoan[1]?.disbursed">Disbursed</button>
                                 </div>
                             </div>
                             <div *ngIf="loan.loanStage.id == 5">
@@ -150,7 +136,7 @@
                             <div *ngIf="loan.loanStage.id == 8">
                                 <div class="kt-pointer">
                                     <!-- <img src="../../../../../assets/media/icons/action.svg" alt=""> -->
-                                    <button (click)="packetImageUpload(loan)"
+                                    <button (click)="editLoan(loan)" [ngClass]="{'cursor-not-allowed': !permission.uploadDocuments}"
                                         class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                                 </div>
                             </div>
