--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -42,7 +42,7 @@
                             <label class="text-color kt-padding-l-10">KYC Status</label>
                         </div>
                         <div class="col-6">
-                           <input type="text" class="form-control position-relative text-capitalize" formControlName="kycStatus">
+                           <input type="text" class="form-control position-relative text-capitalize" formControlName="kycStatus" readonly>
                            <span class="inside-input" (click)="viewKYC()">View KYC</span>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                 </div> -->
             </div>
         </div>
-        <div class="text-right py-3 col-12" *ngIf="!disable">
+        <div class="text-right py-3 col-12" *ngIf="showButton">
             <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
         </div>
     </div>
