--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
@@ -122,7 +122,7 @@
             </span>
 
         </div>
-        <div class="text-right py-3 col-12" *ngIf="!disable">
+        <div class="text-right py-3 col-12" *ngIf="showButton">
             <kt-button [value]="'Next'" [type]="'button'" (click)="nextAction()"></kt-button>
         </div>
     </div>
