--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.scss
@@ -5,4 +5,19 @@
 		margin-top: -65px;
 		margin-left: -7px;
 	}
+	.edit-width {
+		min-width: 230px;
+		max-width: 250px;
+	}
+
+	.w-80{
+		width: 80% !important;
+	}
+
+	.edit-icon {
+		position: absolute;
+		top: 5px;
+		right: 1.8rem;
+		z-index: 2;
+	}
 }
