--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
@@ -131,6 +131,6 @@
     </div>
 
 </div>
-<div class="text-right kt-padding-b-15" *ngIf="packets.controls.length && url != 'view-loan'">
-    <kt-button [type]="'button'" [value]="'Next'" (click)="save()"></kt-button>
+<div class="text-right kt-padding-b-15" *ngIf="showButton && packets.controls.length">
+    <kt-button [type]="'button'" [value]="'Save'" (click)="save()"></kt-button>
 </div>
